style.css
body {
  margin: 0;
}

h1 {
  /* border: 1px solid green; */
}

p {
  /* border: 1px solid blue; */
}

#navbar {
  display: flex;
  position: fixed;
  background-color: #dd614a;
  color: #fefcfd;
  width: 100%;
  justify-content: flex-end;
  padding: 0.5rem 0 0.5rem 0;
}

.nav-item {
  margin-right: 1rem;
  text-decoration: none;
  font-size: 1.25rem;
  color: #172121;
}

.nav-item:hover {
  color: #fefcfd;
}

#welcome-section {
  /* border: 1px solid red; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  height: 100vh;
  background-color: #172121;
}

#projects {
  height: 100vh;
  background-color: #213030;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#projects-container {
  /* background-color: #dd614a; */
  max-width: 1200px;
  display: flex;
  justify-content: center;
  column-gap: 2.5rem;
  row-gap: 2.5rem;
  flex-wrap: wrap;
}

.projects-item {
  background-color: #dd614a;
  display: flex;
  flex-direction: column;
  max-width: 300px;
  text-align: center;
  /* animation: transform 5s; */
  color: #172121;
  text-decoration: none;
}

.projects-item:hover {
  color: #fefcfd;
  transform: scale(1.15, 1.15);
}

#contact {
  background-color: #172121;
  height: 100vh;
  max-width: 1200px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#contact p {
  /* border: 1px solid white; */
  text-align: center;
}

#contact-links {
  /* border: 1px solid white; */
  font-size: 1.5rem;
  display: flex;
  flex-direction: row;
  justify-content: center;
  column-gap: 1.5rem;
  text-align: center;
  flex-wrap: wrap;
}

#contact-links a {
  text-decoration: none;
}

#contact-links a:hover {
  color: #f48668;
}

@media (max-width: 642px) {
  #contact-links a {
    width: 100%;
  }
}

.open-sans-title {
  font-family: "Open Sans", sans-serif;
  font-size: 3rem;
  margin-bottom: 0;
  color: #fefcfd;
  font-weight: 1000;
}

.poppins-subtitle {
  font-family: "Poppins", sans-serif;
  font-size: 1.5rem;
  margin-top: 0.5rem;
  color: #f48668;
}

.open-sans {
  font-family: "Open Sans", sans-serif;
}

.poppins {
  font-family: "Poppins", sans-serif;
}

.white {
  color: #fefcfd;
}

